--- a/login/screen.css
+++ b/login/screen.css
@@ -19,7 +19,11 @@ html {
 }
 
 header {
-background-color: blue;
+  background-color: #66CCFF;
+}
+
+body{
+  background-color: #FFFFCC;
 }
 
 h1 {
@@ -29,7 +33,7 @@ h1 {
 	font-family: "Arial Narrow", Arial, sans-serif;
 	line-height: 1.618em;
 	color: white;
-  background-color: blue;
+  background-color: #66CCFF;
   margin-bottom: .618em;
   margin-left: .49em
 }
@@ -37,7 +41,8 @@ h1 {
 h2{
   font-size: 1.957em;
   line-height: .056em;
-  margin: .69em;
+  margin-bottom: .69em;
+  margin-top: .69em;
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
   font-weight: bold;
   background-color:;
@@ -46,7 +51,7 @@ h2{
 
 form {
   /*margin-left: 2em;*/
-  background-color: blue;
+  background-color: #66CCFF;
 }
 
 ul{
@@ -61,19 +66,45 @@ label {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight:;
   margin-left: 2.618em;
-  color: grey;
+  color: #E0E0E0;
 
 }
 
 input {
   line-height: 1.618em;
   margin: .618em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+
+select {
+  line-height: 1.618em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight:;
+  font-size: 1.618em;
+  color: #E0E0E0;
+}
+
+option {
+  line-height:;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight:;
+  font-size: 1.618em;
+  color: #E0E0E0;
+}
+
+.register {
+  margin-left: 5em;
+  color: blue;
+  line-height: ;
+  font-size: 1.957em;
 }
 
 .login {
   float: left;
   margin-left: 4em;
   width =;
+
 }
 
 .signup {
