--- a/login/screen.css
+++ b/login/screen.css
@@ -7,7 +7,7 @@ http://yuilibrary.com/license/
 =================================================
 */
 
-html{color:#000;background:white}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
+html{color:#000;background:;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
 
 html {
 	-moz-text-size-adjust: 100%;
@@ -52,6 +52,7 @@ h2{
 form {
   /*margin-left: 2em;*/
   background-color: #66CCFF;
+
 }
 
 ul{
@@ -61,6 +62,8 @@ li{
 }
 
 label {
+  display: inline-block;
+  width: 5em;
   text-transform: lowercase;
   line-height:;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -73,8 +76,33 @@ label {
 input {
   line-height: 1.618em;
   margin: .618em;
+  width: 10em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: .3em solid #999;
 
+}
+
+input:focus {
+  border-color: #000;
+  }
+
+button {
+  margin: .5em;
+  line-height: ;
+  font-size: .812em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #3366FF;
+  color: #66CCFF;
+  border-color: black;
+
+
+}
+
+button:focus {
+  border-color: white;
+  color:white;
 }
 
 select {
@@ -93,6 +121,17 @@ option {
   color: #E0E0E0;
 }
 
+.adult {
+  display: inline;
+  width: ;
+  text-transform: lowercase;
+  line-height:;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight:;
+  margin-left: 2.618em;
+  color: #E0E0E0;
+}
+
 .register {
   margin-left: 5em;
   color: blue;
@@ -100,14 +139,24 @@ option {
   font-size: 1.957em;
 }
 
+.adult label {
+  width: 15em;
+  margin: 0em;
+  text-decoration: underline;
+  font-weight: bold;
+  color: #990000;
+}
+
 .login {
+
   float: left;
   margin-left: 4em;
-  width =;
+
 
 }
 
 .signup {
+
   float: right;
 }
 
