--- a/login/screen.css
+++ b/login/screen.css
@@ -34,14 +34,38 @@ h1 {
 	line-height: 1.618em;
 	color: white;
   background-color: #66CCFF;
-  margin-bottom: .618em;
+  margin-bottom: .49em;
   margin-left: .49em
 }
+
+
+header ul {
+  display: inline;
+  margin-top: -0.9em;
+  margin-left: .618em;
+}
+
+header ul li {
+  display: inline;
+  background-color: #66CCFF;
+  padding: 0em .918em;
+  margin-bottom: .618em;
+  line-height:1.618em;
+}
+
+header ul li a{
+  font-family:  "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  font-size: 1.318em;
+  font-weight: bold;
+  color: white;
+
+}
+
 
 h2{
   font-size: 1.957em;
   line-height: .056em;
-  margin-bottom: .69em;
+  margin-bottom: .89em;
   margin-top: .69em;
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
   font-weight: bold;
@@ -76,7 +100,7 @@ label {
 input {
   line-height: 1.618em;
   margin: .618em;
-  width: 10em;
+
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -109,17 +133,19 @@ select {
   line-height: 1.618em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight:;
-  font-size: 1.618em;
-  color: #E0E0E0;
+  font-size: .918em;
+  color: black;
 }
 
 option {
+  max-width: 30%;
   line-height:;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight:;
-  font-size: 1.618em;
-  color: #E0E0E0;
+  font-size: .918em;
+  color: black;
 }
+
 
 .adult {
   display: inline;
@@ -148,15 +174,14 @@ option {
 }
 
 .login {
-
+  margin-top: 2em;
   float: left;
   margin-left: 4em;
-
-
 }
 
 .signup {
-
-  float: right;
+  margin-top: 2em;
+  margin-left: 4em;
+  float: left;
 }
 
