--- a/login/screen.css
+++ b/login/screen.css
@@ -11,7 +11,9 @@ html{color:#000;background:;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,co
 
 /*
 Modular Scale:
- __ px = __ em
+18 px = 1 em
+Golden section
+1px=.056em
 */
 
 html {
@@ -28,7 +30,7 @@ html {
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 	text-size-adjust: 100%;
-	line-height: 1em; /* 24px at golden scale */
+	line-height: 1em;
 	font-size: .824em;
 }
 
@@ -49,28 +51,28 @@ h1 {
   color: white;
   background-color: #66CCFF;
   margin-bottom: em;
-  margin-left: .49em;
+  margin-left: .382em;
 
 }
 
 
 header ul {
   display: inline;
-  margin-top: -0.9em;
+  margin-top: -0.997em;
   margin-left: .618em;
 }
 
 header ul li {
   display: inline-block;
   background-color: #66CCFF;
-  padding: 0em .918em;
+  padding: 0em .997em;
   margin-bottom: .618em;
   line-height:1.618em;
 }
 
 header ul li a{
   font-family:  "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-  font-size: 1.318em;
+  font-size: 1.613em;
   font-weight: bold;
   color: white;
   display: block;
@@ -79,11 +81,10 @@ header ul li a{
 
 
 h2{
-  display:;
-  font-size: 1.957em;
-  line-height: .8em;
+  font-size: 1.618em;
+  line-height: .997em;
   margin-bottom: 1em;
-  margin-top: .69em;
+  margin-top: .618em;
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
   font-weight: bold;
   background-color:;
@@ -100,14 +101,13 @@ form {
 
 
 label {
-  display: inline-block;
-  width: 5em;
+  width: 4.765em;
   text-transform: lowercase;
   line-height:;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight:;
   margin-left: 2.618em;
-  margin-top: .5em;
+  margin-top: .616em;
   color: #E0E0E0;
 
 }
@@ -119,7 +119,7 @@ input {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  border: .3em solid #999;
+  border: .381em solid #999;
 
 }
 
@@ -128,10 +128,9 @@ input:focus {
   }
 
 button {
-  margin: .5em;
-  margin-left: 7.618em;
-  line-height: ;
-  font-size: 1.314em;
+  margin: .616em;
+  margin-left: 7.686em;
+  font-size: 1.613em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #3366FF;
   color: #66CCFF;
@@ -148,21 +147,18 @@ button:focus {
 select {
   line-height: 1.618em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight:;
-  font-size: .918em;
+  font-size: .997em;
   color: black;
   max-width: 30%;
   height: auto;
   box-sizing: border-box;
-
-  border: .1em solid #999;
+  border: .145em solid #999;
 }
 
 option {
-  line-height:;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight:;
-  font-size: .918em;
+  font-size: .997em;
   color: black;
   height: auto;
 }
@@ -181,15 +177,20 @@ option {
 
 
 .register label {
-  width: 15em;
+  width: 17.886em;
   margin: 0em;
   font-weight: bold;
-  color: #;
+  color: ;
+}
+
+.register input {
+  box-sizing: border-box;
+  border: .145em solid #999;
 }
 
 .adult {
-  display: inline;
-  width: ;
+  /*display: inline;*/
+  width: auto;
   text-transform: lowercase;
   line-height:;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -202,7 +203,7 @@ option {
 
 
 .adult label {
-  width: 15em;
+  width: 17.886em;
   margin: 0em;
   text-decoration: underline;
   font-weight: bold;
@@ -211,29 +212,53 @@ option {
 
 .adult input {
   box-sizing: border-box;
-  border: .1em solid #999;
+  border: .145em solid #999;
 }
 
 .login {
-  margin-top: 2em;
+  margin-top: 2.61em;
   float: left;
-  margin-left: 4em;
+  margin-left: 4.2223em;
 }
 
-/*Media Querie */
-@media screen and (min-width: 48em) {
-  h2 {
-    min-width: 40%;
+@media screen and (max-width: 42em) {
 
-  }
-  header ul {
-    min-width: 45em;
-    margin-left: 0em;
-  }
-  .login {
-    margin-left: 0em;
-    min-width: 40em;
 
+
+		header navigation li {
+			min-width: auto;
+			margin: 0 0 0 0;
+		}
+
+  .navigation {
   }
 
-  }
+	header {
+		margin: 0 0 2.61em 0;
+	}
+
+	header h1 {
+		margin: 0 0 1em 0;
+	}
+
+
+
+
+	.login {
+			margin: 1.613em 1.613em 2.61em 0;
+		}
+
+	.login h2 {
+		margin: 0 0 1.613em 0;
+		min-width: 4.2223em;
+	}
+
+	button {
+	  margin: 0 0 1.613em 1.613em;
+	}
+
+	.adult label {
+	  margin: 0 0 1.613em 0;
+	  min-width: 4.2223em;
+	}
+}
