--- a/login/screen.css
+++ b/login/screen.css
@@ -12,7 +12,7 @@ html{color:#000;background:;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,co
 /*
 Modular Scale:
 18 px = 1 em
-Golden section
+Golden Section - conversion
 1px=.056em
 */
 
