citation added for image

--- a/login/screen.css
+++ b/login/screen.css
@@ -46,6 +46,8 @@ body{
 }
 
 /*Background image taked from:
+"casdegere"
+https://www.flickr.com/photos/22748279@N06/8517013412/in/photolist-6QX4je-e4U3Aj-femz2n-j7zSUe-8Zv2Rk-8Zv2Fp-75pFRd-7ytm98-77cdjH-AZfKz-e6d9JP-gtvyY1-9dBYmQ-dYBVmQ-nTD7kJ-9dyWsM-e6d9L2/
 
 */
 
