--- a/login/screen.css
+++ b/login/screen.css
@@ -14,6 +14,8 @@ Modular Scale:
 18 px = 1 em
 Golden Section - conversion
 1px=.056em
+
+18px @ 1:1.618
 */
 
 html {
@@ -35,7 +37,7 @@ html {
 }
 
 header {
-  background-color: #66CCFF;
+  background-color: #000066;
 }
 
 body{
@@ -58,7 +60,7 @@ h1 {
   font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
   line-height: 1.618em;
   color: white;
-  background-color: #66CCFF;
+  background-color: #000066;
   margin-left: .382em;
 
 }
@@ -72,7 +74,7 @@ header ul {
 
 header ul li {
   display: inline-block;
-  background-color: #66CCFF;
+  background-color: #000066;
   padding: 0em .997em;
   margin-bottom: .618em;
   line-height:1.618em;
@@ -100,7 +102,7 @@ h2{
 
 form {
   /*margin-left: 2em;*/
-  background-color: #66CCFF;
+  background-color: #000066;
   margin-top: 1em;
 
 }
@@ -136,11 +138,11 @@ input:focus {
 
 button {
   margin: .616em;
-  margin-left: 7.686em;
+  margin-left: 4.223em;
   font-size: 1.613em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #3366FF;
-  color: #66CCFF;
+  color: #000066;
   border-color: black;
 
 
@@ -204,7 +206,7 @@ option {
   font-weight:;
   margin-top: 1em;
   margin-left: 2.618em;
-  color: #E0E0E0;
+  color: #CC0033;
 }
 
 
@@ -214,7 +216,7 @@ option {
   margin: 0em;
   text-decoration: underline;
   font-weight: bold;
-  color: #990000;
+  color: #CC0033;
 }
 
 .adult input {
@@ -231,7 +233,42 @@ option {
 
 /*Media Querie*/
 
-@media screen and (max-width: 42em) {
+@media screen and (max-width: 42em) and {
+
+	header navigation li {
+		min-width: auto;
+		margin: 0 0 0 0;
+	}
+
+	header {
+		margin: 0 0 2.61em 0;
+	}
+
+	header h1 {
+		margin: 0 0 1em 0;
+	}
+
+	.login {
+		margin: 1.613em 1.613em 2.61em 0;
+		}
+
+  h2 {
+		margin: 0 0 1.613em 0;
+		min-width: 4.2223em;
+	}
+
+	button {
+	  margin: 0 0 1.613em 1.613em;
+	}
+
+	.adult label {
+	  margin: 0 0 1.613em 0;
+	  min-width: 4.2223em;
+	}
+}
+
+
+@media screen and (max-width: 111.11em) and {
 
 	header navigation li {
 		min-width: auto;
